// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component:UserDisplay Should render and match snapshot: empty users 1`] = `
<div>
  <div
    class="users-display-main"
  >
    <div
      class="ready"
    >
      <div
        class="search-bar"
      >
        <div
          class="title-area"
        >
          <h1>
            Driver Management
          </h1>
          <h3>
            Data driver yang bekerja dengan Anda.
          </h3>
        </div>
        <div
          class="search-area"
        >
          <div
            class="search-icon"
          >
            <i
              class="fas fa-search"
            />
          </div>
          <input
            data-testid="search-input"
            placeholder="Cari Driver"
            value=""
          />
          <button
            class="add-driver"
          >
            Tambah Driver
            <i
              class="fas fa-plus"
            />
          </button>
        </div>
      </div>
      <div
        class="cards-place"
      />
      <div
        class="pagin-place"
      >
        <button
          class="prev page"
          data-testid="prev-button"
          disabled=""
        >
          <i
            class="fas fa-chevron-left"
          />
          <span>
            Previous Page
          </span>
        </button>
        <button
          class="next page"
          data-testid="next-button"
          disabled=""
        >
          <span>
            Next Page
          </span>
          <i
            class="fas fa-chevron-right"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component:UserDisplay Should render and match snapshot: load error 1`] = `
<div>
  <div
    class="users-display-main"
  >
    <div
      class="error"
    >
      <span>
        Gagal memuat data. Silakan muat ulang halaman.
      </span>
    </div>
  </div>
</div>
`;

exports[`Component:UserDisplay Should render and match snapshot: loading 1`] = `
<div>
  <div
    class="users-display-main"
  >
    <div
      class="loading"
    >
      <span>
        Memuat Data...
      </span>
    </div>
  </div>
</div>
`;
